crates/sgf-core/tests/snapshots/ops_header/set_num_empires.snap
---
source: crates/sgf-core/tests/ops_header.rs
expression: "report(&session, &result)"
---
Set header num_empires to { min = 3 max = 5 }
inverse: SetHeaderField { key: "num_empires", value: Some("{ min = 1 max = 2 }") }

--- scenario
+++ scenario
@@ -7,7 +7,7 @@
 	priority = 5
 	default = no
 	supports_shape = elliptical
-	num_empires = { min = 1 max = 2 }
+	num_empires = { min = 3 max = 5 }
 	num_empire_default = 1
 	fallen_empire_default = 0
 	fallen_empire_max = 0
